Refactor to use Virtual Threads for heavy blocking operations